Fixed some layout bugs

--- a/assets/css/goodmoves-styles.scss
+++ b/assets/css/goodmoves-styles.scss
@@ -931,6 +931,8 @@ body {
   box-shadow: $toolbar-shadow-reverse;
 }
 .tfn-latest {
+  background-color: #fdfdfd;
+  padding: 0 $unit*1.5 0 !important;
   .mdc-card {
     box-shadow: none;
   }
